--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,17 @@
 @font-face {
-  font-family: 'PollerOne-Regular';
+  font-family: 'Pretendard';
+  src: url('/fonts/PretendardVariable.woff2') format('woff');
+  font-weight: normal;
   font-style: normal;
-  src: url("/fonts/PollerOne-Regular.ttf") format("ttf");
+  unicode-range:U+AC00-D7A3;	/* 한글 */
+}
+
+@font-face {
+  font-family: "PollerOne";
+  src: url('/fonts/PollerOne-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+  unicode-range:U+0041-005A, U+0061-007A;	/* 영문 대소문자 */
 }
 
 * {
@@ -14,5 +24,5 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-  font-family: PollerOne-Regular, sans-serif;
+  font-family: -apple-system, Pretendard, PollerOne, sans-serif;
 }
