--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,9 +20,20 @@
   margin: 0;
 }
 
-html,
-body {
+html{
   max-width: 100vw;
+  height: 100%;
   overflow-x: hidden;
   font-family: -apple-system, Pretendard, PollerOne, sans-serif;
+  background: #F1F1F0;
+}
+
+body {
+  padding: 50px 0;
+}
+
+.bodyContainer {
+  display: grid;
+  height: 100vh;
+  grid-template-rows: 60px 1fr
 }
