--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,7 +11,7 @@
   src: url('/fonts/PollerOne-Regular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
-  unicode-range:U+0041-005A, U+0061-007A;	/* 영문 대소문자 */
+  unicode-range:U+0041-005A, U+0061-007A, U+0030-0039;	/* 영문 대소문자 */
 }
 
 * {
@@ -28,12 +28,9 @@ html{
   background: #F1F1F0;
 }
 
-body {
-  padding: 50px 0;
-}
 
 .bodyContainer {
   display: grid;
   height: 100vh;
-  grid-template-rows: 60px 1fr
+  grid-template-rows: 80px auto 60px
 }
