--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,9 +1,10 @@
 .container{
-  margin: 0px 50px;
+  margin: 30px 50px 0 50px ;
   border-top: 1px solid #1E1E1D;
   border-bottom: 1px solid #1E1E1D;
-  height: 60px;
+  height: 50px;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  font-size: 16px;
 }
