feature: 컨텐츠 영역 작업중

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -32,5 +32,5 @@ html{
 .bodyContainer {
   display: grid;
   height: 100vh;
-  grid-template-rows: 80px auto 60px
+  grid-template-rows: 80px auto 60px;
 }
