--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,11 +7,19 @@
 }
 
 @font-face {
+  font-family: 'PretendardEnglish';
+  src: url('/fonts/PretendardVariable.woff2') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  unicode-range:U+0041-005A, U+0061-007A, U+0030-0039;
+}
+
+@font-face {
   font-family: "PollerOne";
   src: url('/fonts/PollerOne-Regular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
-  unicode-range:U+0041-005A, U+0061-007A, U+0030-0039;	/* 영문 대소문자 */
+  unicode-range:U+0041-005A, U+0061-007A, U+0030-0039;
 }
 
 * {
