--- a/src/components/Right/Right.module.css
+++ b/src/components/Right/Right.module.css
@@ -1,7 +1,12 @@
 
 .right {
-  padding: 10px 0 0 20px;
+  padding: 10px 0 0 0;
   margin-right: 50px;
   overflow: scroll;
   overflow-x: hidden;
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+.right::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera*/
 }
